2003-07-31  Antonio Xu  <antonio.xu@sun.com>

	* e-msg-composer.c (drag_data_received): add the drop type of
	mozilla browser link to make composer support to handle mozilla
	DnD data.  [#47131]

2003-07-28  Antonio Xu <antonio.xu@sun.com>

	* e-msg-composer-attachment-bar.c  (update): add
	gdk_pixbuf_loader_close to close pix buffer loading.  [#45908]

2003-07-25  Larry Ewing  <lewing@ximian.com>

	* e-msg-composer.c (GNOME_GTKHTML_EDITOR_CONTROL_ID): require the
	new composer control version.

2003-07-17  Michel Daenzer  <michel@daenzer.net>

	* e-msg-composer.c (autosave_manager_query_load_orphans): Set
	default answer of dialog to 'yes' to try and prevent autosaved
	messages from getting lost accidentally.

2003-07-23  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment-bar.c (attach_to_multipart): Revert my
	previous changes here too.

	* e-msg-composer.c (build_message): Revert my previous changes.

2003-07-23  Dan Winship  <danw@ximian.com>

	* bad-icon.xpm: Remove this. It was only used by e-icon-list,
	which is no longer there.

	* composer-marshal.list: Likewise

	* Makefile.am: Update

2003-07-21  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (build_message): Init charset to NULL.

2003-07-21  Dan Winship  <danw@ximian.com>

	* e-msg-composer.c (build_message): Make this work again.

2003-07-17  Maxx Cao  <maxx.cao@sun.com>

	** For bug #46013

	* e-msg-composer-hdrs.c (header_new_recipient): To/cc/bcc buttons
	made focusable.

2003-07-16  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment-bar.c (attach_to_multipart): don't set
	the rawtext bit anymore.

	* e-msg-composer.c (build_message): Convert the plain part's
	content stream from UTF-8 to whatever charset we want.

2003-07-16  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer-attachment-bar.c (popup_menu_event): Fix warnings
	and other breakage introduced by Maxx.

2002-07-14  Maxx Cao  <maxx.cao@sun.com>

	** For bug #45826
