@@ -1,3 +1,11 @@
+2003-07-16  Jeffrey Stedfast  <fejj@ximian.com>
+
+	* e-msg-composer-attachment-bar.c (attach_to_multipart): don't set
+	the rawtext bit anymore.
+
+	* e-msg-composer.c (build_message): Convert the plain part's
+	content stream from UTF-8 to whatever charset we want.
+
 2003-07-31  Antonio Xu  <antonio.xu@sun.com>
 
 	* e-msg-composer.c (drag_data_received): add the drop type of
